feat(argo): update triggers and templates

--- a/infra/argocd/values.yaml
+++ b/infra/argocd/values.yaml
@@ -18,38 +18,339 @@ notifications:
       url: http://http.tcp.ntfy.ntfy.svc.cluster.local
       insecureSkipVerify: true
   triggers:
-    trigger.sync-status: |
-      - description: Send sync status notification
-        when: app.status.operationState.phase in ['Succeeded', 'Running', 'Error', 'Failed']
-        send: [sync-status]
+    trigger.on-deployed: |
+      - description: Application is synced and healthy. Triggered once per commit.
+        oncePer: app.status.sync.revision
+        send:
+        - app-deployed
+        when: app.status.operationState.phase in ['Succeeded'] and app.status.health.status == 'Healthy'
+    trigger.on-health-degraded: |
+      - description: Application has degraded
+        send:
+        - app-health-degraded
+        when: app.status.health.status == 'Degraded'
+    trigger.on-sync-failed: |
+      - description: Application syncing has failed
+        send:
+        - app-sync-failed
+        when: app.status.operationState.phase in ['Error', 'Failed']
+    trigger.on-sync-running: |
+      - description: Application is being synced
+        send:
+        - app-sync-running
+        when: app.status.operationState.phase in ['Running']
+    trigger.on-sync-status-unknown: |
+      - description: Application status is 'Unknown'
+        send:
+        - app-sync-status-unknown
+        when: app.status.sync.status == 'Unknown'
+    trigger.on-sync-succeeded: |
+      - description: Application syncing has succeeded
+        send:
+        - app-sync-succeeded
+        when: app.status.operationState.phase in ['Succeeded']
+    defaultTriggers: |
+      - on-sync-status-unknown
   templates:
-    template.sync-status: |
-      webhook:
-        ntfy:
-          method: POST
-          path: '/'
-          body: |
+    template.app-deployed: |
+      email:
+        subject: New version of an application {{.app.metadata.name}} is up and running.
+      message: |
+        {{if eq .serviceType "slack"}}:white_check_mark:{{end}} Application {{.app.metadata.name}} is now running new version of deployments manifests.
+      ntfy:
+        method: POST
+        path: '/'
+        body: |
+          {
+            "topic": "status",
+            "tags": [
+              "argocd",
+              "{{- .app.metadata.name -}}"
+            ],
+            "title": "New version of {{.app.metadata.name}} deployed.",
+            "message": ":white_check_mark: Application {{.app.metadata.name}} is now running new version of deployments manifests.",
+            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+          }
+      slack:
+        attachments: |
+          [{
+            "title": "{{ .app.metadata.name}}",
+            "title_link":"{{.context.argocdUrl}}/applications/{{.app.metadata.name}}",
+            "color": "#18be52",
+            "fields": [
             {
-              "topic": "status",
-              "tags": [
-                "argocd",
-                "{{- .app.metadata.name -}}"
-                {{if eq .app.status.operationState.phase "Running"}} ,"pending"{{end}}
-                {{if eq .app.status.operationState.phase "Succeeded"}} ,"success"{{end}}
-                {{if eq .app.status.operationState.phase "Error"}} ,"error"{{end}}
-                {{if eq .app.status.operationState.phase "Failed"}} ,"error"{{end}}
-              ],
-              "title": "ArgoCD sync {{.app.metadata.name}}",
-              "message": "Sync of project {{.app.metadata.name}} with state {{.app.status.operationState.phase}}"
-              {{ if eq .app.status.operationState.phase "Running" -}}
-              "priority": 1,
-              {{else if eq .app.status.operationState.phase "Error" -}}
-              "priority": 5,
-              {{else if eq .app.status.operationState.phase "Failed" -}}
-              "priority": 5,
-              {{- end -}},
-              "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+              "title": "Sync Status",
+              "value": "{{.app.status.sync.status}}",
+              "short": true
+            },
+            {
+              "title": "Repository",
+              "value": "{{.app.spec.source.repoURL}}",
+              "short": true
+            },
+            {
+              "title": "Revision",
+              "value": "{{.app.status.sync.revision}}",
+              "short": true
             }
+            {{range $index, $c := .app.status.conditions}}
+            {{if not $index}},{{end}}
+            {{if $index}},{{end}}
+            {
+              "title": "{{$c.type}}",
+              "value": "{{$c.message}}",
+              "short": true
+            }
+            {{end}}
+            ]
+          }]
+    template.app-health-degraded: |
+      email:
+        subject: Application {{.app.metadata.name}} has degraded.
+      message: |
+        {{if eq .serviceType "slack"}}:exclamation:{{end}} Application {{.app.metadata.name}} has degraded.
+        Application details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.
+      ntfy:
+        method: POST
+        path: '/'
+        body: |
+          {
+            "topic": "status",
+            "tags": [
+              "argocd",
+              "{{- .app.metadata.name -}}"
+            ],
+            "title": "Application {{.app.metadata.name}} has degraded.",
+            "message": ":exclamation: Application {{.app.metadata.name}} has degraded.\nApplication details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.",
+            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+          }
+      slack:
+        attachments: |-
+          [{
+            "title": "{{ .app.metadata.name}}",
+            "title_link": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}",
+            "color": "#f4c030",
+            "fields": [
+            {
+              "title": "Sync Status",
+              "value": "{{.app.status.sync.status}}",
+              "short": true
+            },
+            {
+              "title": "Repository",
+              "value": "{{.app.spec.source.repoURL}}",
+              "short": true
+            }
+            {{range $index, $c := .app.status.conditions}}
+            {{if not $index}},{{end}}
+            {{if $index}},{{end}}
+            {
+              "title": "{{$c.type}}",
+              "value": "{{$c.message}}",
+              "short": true
+            }
+            {{end}}
+            ]
+          }]
+    template.app-sync-failed: |
+      email:
+        subject: Failed to sync application {{.app.metadata.name}}.
+      message: |
+        {{if eq .serviceType "slack"}}:exclamation:{{end}}  The sync operation of application {{.app.metadata.name}} has failed at {{.app.status.operationState.finishedAt}} with the following error: {{.app.status.operationState.message}}
+        Sync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .
+      ntfy:
+        method: POST
+        path: '/'
+        body: |
+          {
+            "topic": "status",
+            "tags": [
+              "argocd",
+              "{{- .app.metadata.name -}}"
+            ],
+            "title": "Failed to sync application {{.app.metadata.name}}.",
+            "message": ":exclamation: The sync operation of application {{.app.metadata.name}} has failed at {{.app.status.operationState.finishedAt}} with the following error: {{.app.status.operationState.message}}\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
+            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+          }
+      slack:
+        attachments: |-
+          [{
+            "title": "{{ .app.metadata.name}}",
+            "title_link":"{{.context.argocdUrl}}/applications/{{.app.metadata.name}}",
+            "color": "#E96D76",
+            "fields": [
+            {
+              "title": "Sync Status",
+              "value": "{{.app.status.sync.status}}",
+              "short": true
+            },
+            {
+              "title": "Repository",
+              "value": "{{.app.spec.source.repoURL}}",
+              "short": true
+            }
+            {{range $index, $c := .app.status.conditions}}
+            {{if not $index}},{{end}}
+            {{if $index}},{{end}}
+            {
+              "title": "{{$c.type}}",
+              "value": "{{$c.message}}",
+              "short": true
+            }
+            {{end}}
+            ]
+          }]
+    template.app-sync-running: |
+      email:
+        subject: Start syncing application {{.app.metadata.name}}.
+      message: |
+        The sync operation of application {{.app.metadata.name}} has started at {{.app.status.operationState.startedAt}}.
+        Sync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .
+      ntfy:
+        method: POST
+        path: '/'
+        body: |
+          {
+            "topic": "status",
+            "tags": [
+              "argocd",
+              "{{- .app.metadata.name -}}"
+            ],
+            "title": "Start syncing application {{.app.metadata.name}}.",
+            "message": "The sync operation of application {{.app.metadata.name}} has started at {{.app.status.operationState.startedAt}}.\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
+            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+          }
+      slack:
+        attachments: |-
+          [{
+            "title": "{{ .app.metadata.name}}",
+            "title_link":"{{.context.argocdUrl}}/applications/{{.app.metadata.name}}",
+            "color": "#0DADEA",
+            "fields": [
+            {
+              "title": "Sync Status",
+              "value": "{{.app.status.sync.status}}",
+              "short": true
+            },
+            {
+              "title": "Repository",
+              "value": "{{.app.spec.source.repoURL}}",
+              "short": true
+            }
+            {{range $index, $c := .app.status.conditions}}
+            {{if not $index}},{{end}}
+            {{if $index}},{{end}}
+            {
+              "title": "{{$c.type}}",
+              "value": "{{$c.message}}",
+              "short": true
+            }
+            {{end}}
+            ]
+          }]
+    template.app-sync-status-unknown: |
+      email:
+        subject: Application {{.app.metadata.name}} sync status is 'Unknown'
+      message: |
+        {{if eq .serviceType "slack"}}:exclamation:{{end}} Application {{.app.metadata.name}} sync is 'Unknown'.
+        Application details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.
+        {{if ne .serviceType "slack"}}
+        {{range $c := .app.status.conditions}}
+            * {{$c.message}}
+        {{end}}
+        {{end}}
+      ntfy:
+        method: POST
+        path: '/'
+        body: |
+          {
+            "topic": "status",
+            "tags": [
+              "argocd",
+              "{{- .app.metadata.name -}}"
+            ],
+            "title": "Application {{.app.metadata.name}} sync status is 'Unknown'.",
+            "markdown": true,
+            "message": ":exclamation: Application {{.app.metadata.name}} sync is 'Unknown'.\nApplication details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.\n{{range $c := .app.status.conditions}}* {{$c.message}}\n{{end}}",
+            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+          }
+      slack:
+        attachments: |-
+          [{
+            "title": "{{ .app.metadata.name}}",
+            "title_link":"{{.context.argocdUrl}}/applications/{{.app.metadata.name}}",
+            "color": "#E96D76",
+            "fields": [
+            {
+              "title": "Sync Status",
+              "value": "{{.app.status.sync.status}}",
+              "short": true
+            },
+            {
+              "title": "Repository",
+              "value": "{{.app.spec.source.repoURL}}",
+              "short": true
+            }
+            {{range $index, $c := .app.status.conditions}}
+            {{if not $index}},{{end}}
+            {{if $index}},{{end}}
+            {
+              "title": "{{$c.type}}",
+              "value": "{{$c.message}}",
+              "short": true
+            }
+            {{end}}
+            ]
+          }]
+    template.app-sync-succeeded: |
+      email:
+        subject: Application {{.app.metadata.name}} has been successfully synced.
+      message: |
+        {{if eq .serviceType "slack"}}:white_check_mark:{{end}} Application {{.app.metadata.name}} has been successfully synced at {{.app.status.operationState.finishedAt}}.
+        Sync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .
+      ntfy:
+        method: POST
+        path: '/'
+        body: |
+          {
+            "topic": "status",
+            "tags": [
+              "argocd",
+              "{{- .app.metadata.name -}}"
+            ],
+            "title": "Application {{.app.metadata.name}} has been successfully synced.",
+            "markdown": true,
+            "message": ":white_check_mark: Application {{.app.metadata.name}} has been successfully synced at {{.app.status.operationState.finishedAt}}.\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
+            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+          }
+      slack:
+        attachments: |-
+          [{
+            "title": "{{ .app.metadata.name}}",
+            "title_link":"{{.context.argocdUrl}}/applications/{{.app.metadata.name}}",
+            "color": "#18be52",
+            "fields": [
+            {
+              "title": "Sync Status",
+              "value": "{{.app.status.sync.status}}",
+              "short": true
+            },
+            {
+              "title": "Repository",
+              "value": "{{.app.spec.source.repoURL}}",
+              "short": true
+            }
+            {{range $index, $c := .app.status.conditions}}
+            {{if not $index}},{{end}}
+            {{if $index}},{{end}}
+            {
+              "title": "{{$c.type}}",
+              "value": "{{$c.message}}",
+              "short": true
+            }
+            {{end}}
+            ]
+          }]
 
 server:
   ingress:
