--- a/infra/argocd/values.yaml
+++ b/infra/argocd/values.yaml
@@ -57,20 +57,21 @@ notifications:
         subject: New version of an application {{.app.metadata.name}} is up and running.
       message: |
         {{if eq .serviceType "slack"}}:white_check_mark:{{end}} Application {{.app.metadata.name}} is now running new version of deployments manifests.
-      ntfy:
-        method: POST
-        path: '/'
-        body: |
-          {
-            "topic": "status",
-            "tags": [
-              "argocd",
-              "{{- .app.metadata.name -}}"
-            ],
-            "title": "New version of {{.app.metadata.name}} deployed.",
-            "message": ":white_check_mark: Application {{.app.metadata.name}} is now running new version of deployments manifests.",
-            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
-          }
+      webhook:
+        ntfy:
+          method: POST
+          path: '/'
+          body: |
+            {
+              "topic": "status",
+              "tags": [
+                "argocd",
+                "{{- .app.metadata.name -}}"
+              ],
+              "title": "New version of {{.app.metadata.name}} deployed.",
+              "message": ":white_check_mark: Application {{.app.metadata.name}} is now running new version of deployments manifests.",
+              "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+            }
       slack:
         attachments: |
           [{
@@ -110,20 +111,21 @@ notifications:
       message: |
         {{if eq .serviceType "slack"}}:exclamation:{{end}} Application {{.app.metadata.name}} has degraded.
         Application details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.
-      ntfy:
-        method: POST
-        path: '/'
-        body: |
-          {
-            "topic": "status",
-            "tags": [
-              "argocd",
-              "{{- .app.metadata.name -}}"
-            ],
-            "title": "Application {{.app.metadata.name}} has degraded.",
-            "message": ":exclamation: Application {{.app.metadata.name}} has degraded.\nApplication details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.",
-            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
-          }
+      webhook:
+        ntfy:
+          method: POST
+          path: '/'
+          body: |
+            {
+              "topic": "status",
+              "tags": [
+                "argocd",
+                "{{- .app.metadata.name -}}"
+              ],
+              "title": "Application {{.app.metadata.name}} has degraded.",
+              "message": ":exclamation: Application {{.app.metadata.name}} has degraded.\nApplication details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.",
+              "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+            }
       slack:
         attachments: |-
           [{
@@ -158,20 +160,21 @@ notifications:
       message: |
         {{if eq .serviceType "slack"}}:exclamation:{{end}}  The sync operation of application {{.app.metadata.name}} has failed at {{.app.status.operationState.finishedAt}} with the following error: {{.app.status.operationState.message}}
         Sync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .
-      ntfy:
-        method: POST
-        path: '/'
-        body: |
-          {
-            "topic": "status",
-            "tags": [
-              "argocd",
-              "{{- .app.metadata.name -}}"
-            ],
-            "title": "Failed to sync application {{.app.metadata.name}}.",
-            "message": ":exclamation: The sync operation of application {{.app.metadata.name}} has failed at {{.app.status.operationState.finishedAt}} with the following error: {{.app.status.operationState.message}}\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
-            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
-          }
+      webhook:
+        ntfy:
+          method: POST
+          path: '/'
+          body: |
+            {
+              "topic": "status",
+              "tags": [
+                "argocd",
+                "{{- .app.metadata.name -}}"
+              ],
+              "title": "Failed to sync application {{.app.metadata.name}}.",
+              "message": ":exclamation: The sync operation of application {{.app.metadata.name}} has failed at {{.app.status.operationState.finishedAt}} with the following error: {{.app.status.operationState.message}}\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
+              "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+            }
       slack:
         attachments: |-
           [{
@@ -206,20 +209,21 @@ notifications:
       message: |
         The sync operation of application {{.app.metadata.name}} has started at {{.app.status.operationState.startedAt}}.
         Sync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .
-      ntfy:
-        method: POST
-        path: '/'
-        body: |
-          {
-            "topic": "status",
-            "tags": [
-              "argocd",
-              "{{- .app.metadata.name -}}"
-            ],
-            "title": "Start syncing application {{.app.metadata.name}}.",
-            "message": "The sync operation of application {{.app.metadata.name}} has started at {{.app.status.operationState.startedAt}}.\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
-            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
-          }
+      webhook:
+        ntfy:
+          method: POST
+          path: '/'
+          body: |
+            {
+              "topic": "status",
+              "tags": [
+                "argocd",
+                "{{- .app.metadata.name -}}"
+              ],
+              "title": "Start syncing application {{.app.metadata.name}}.",
+              "message": "The sync operation of application {{.app.metadata.name}} has started at {{.app.status.operationState.startedAt}}.\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
+              "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+            }
       slack:
         attachments: |-
           [{
@@ -259,21 +263,22 @@ notifications:
             * {{$c.message}}
         {{end}}
         {{end}}
-      ntfy:
-        method: POST
-        path: '/'
-        body: |
-          {
-            "topic": "status",
-            "tags": [
-              "argocd",
-              "{{- .app.metadata.name -}}"
-            ],
-            "title": "Application {{.app.metadata.name}} sync status is 'Unknown'.",
-            "markdown": true,
-            "message": ":exclamation: Application {{.app.metadata.name}} sync is 'Unknown'.\nApplication details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.\n{{range $c := .app.status.conditions}}* {{$c.message}}\n{{end}}",
-            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
-          }
+      webhook:
+        ntfy:
+          method: POST
+          path: '/'
+          body: |
+            {
+              "topic": "status",
+              "tags": [
+                "argocd",
+                "{{- .app.metadata.name -}}"
+              ],
+              "title": "Application {{.app.metadata.name}} sync status is 'Unknown'.",
+              "markdown": true,
+              "message": ":exclamation: Application {{.app.metadata.name}} sync is 'Unknown'.\nApplication details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.\n{{range $c := .app.status.conditions}}* {{$c.message}}\n{{end}}",
+              "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+            }
       slack:
         attachments: |-
           [{
@@ -308,21 +313,22 @@ notifications:
       message: |
         {{if eq .serviceType "slack"}}:white_check_mark:{{end}} Application {{.app.metadata.name}} has been successfully synced at {{.app.status.operationState.finishedAt}}.
         Sync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .
-      ntfy:
-        method: POST
-        path: '/'
-        body: |
-          {
-            "topic": "status",
-            "tags": [
-              "argocd",
-              "{{- .app.metadata.name -}}"
-            ],
-            "title": "Application {{.app.metadata.name}} has been successfully synced.",
-            "markdown": true,
-            "message": ":white_check_mark: Application {{.app.metadata.name}} has been successfully synced at {{.app.status.operationState.finishedAt}}.\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
-            "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
-          }
+      webhook:
+        ntfy:
+          method: POST
+          path: '/'
+          body: |
+            {
+              "topic": "status",
+              "tags": [
+                "argocd",
+                "{{- .app.metadata.name -}}"
+              ],
+              "title": "Application {{.app.metadata.name}} has been successfully synced.",
+              "markdown": true,
+              "message": ":white_check_mark: Application {{.app.metadata.name}} has been successfully synced at {{.app.status.operationState.finishedAt}}.\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
+              "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
+            }
       slack:
         attachments: |-
           [{
