--- a/infra/argocd/values.yaml
+++ b/infra/argocd/values.yaml
@@ -50,7 +50,12 @@ notifications:
         - app-sync-succeeded
         when: app.status.operationState.phase in ['Succeeded']
     defaultTriggers: |
+      - on-deployed
+      - on-health-degraded
+      - on-sync-failed
+      - on-sync-running
       - on-sync-status-unknown
+      - on-sync-succeeded
   templates:
     template.app-deployed: |
       email:
