--- a/infra/argocd/values.yaml
+++ b/infra/argocd/values.yaml
@@ -8,15 +8,20 @@ configs:
 notifications:
   secret:
     create: false
-  subscriptions:
-    - recipients:
-        - ntfy
-      triggers:
-        - sync-status
   notifiers:
     service.webhook.ntfy: |
       url: http://http.tcp.ntfy.ntfy.svc.cluster.local
       insecureSkipVerify: true
+  subscriptions:
+    - recipients:
+        - ntfy
+      triggers:
+        - on-deployed
+        - on-health-degraded
+        - on-sync-failed
+        - on-sync-running
+        - on-sync-status-unknown
+        - on-sync-succeeded
   triggers:
     trigger.on-deployed: |
       - description: Application is synced and healthy. Triggered once per commit.
