--- a/infra/argocd/values.yaml
+++ b/infra/argocd/values.yaml
@@ -76,10 +76,11 @@ notifications:
               "topic": "status",
               "tags": [
                 "argocd",
+                ":white_check_mark:",
                 "{{- .app.metadata.name -}}"
               ],
               "title": "New version of {{.app.metadata.name}} deployed.",
-              "message": ":white_check_mark: Application {{.app.metadata.name}} is now running new version of deployments manifests.",
+              "message": "Application {{.app.metadata.name}} is now running new version of deployments manifests.",
               "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
             }
       slack:
@@ -130,10 +131,11 @@ notifications:
               "topic": "status",
               "tags": [
                 "argocd",
+                ":exclamation:",
                 "{{- .app.metadata.name -}}"
               ],
               "title": "Application {{.app.metadata.name}} has degraded.",
-              "message": ":exclamation: Application {{.app.metadata.name}} has degraded.\nApplication details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.",
+              "message": "Application {{.app.metadata.name}} has degraded.\nApplication details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.",
               "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
             }
       slack:
@@ -179,10 +181,11 @@ notifications:
               "topic": "status",
               "tags": [
                 "argocd",
+                ":exclamation:",
                 "{{- .app.metadata.name -}}"
               ],
               "title": "Failed to sync application {{.app.metadata.name}}.",
-              "message": ":exclamation: The sync operation of application {{.app.metadata.name}} has failed at {{.app.status.operationState.finishedAt}} with the following error: {{.app.status.operationState.message}}\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
+              "message": "The sync operation of application {{.app.metadata.name}} has failed at {{.app.status.operationState.finishedAt}} with the following error: {{.app.status.operationState.message}}\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
               "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
             }
       slack:
@@ -282,11 +285,12 @@ notifications:
               "topic": "status",
               "tags": [
                 "argocd",
+                ":exclamation:",
                 "{{- .app.metadata.name -}}"
               ],
               "title": "Application {{.app.metadata.name}} sync status is 'Unknown'.",
               "markdown": true,
-              "message": ":exclamation: Application {{.app.metadata.name}} sync is 'Unknown'.\nApplication details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.\n{{range $c := .app.status.conditions}}* {{$c.message}}\n{{end}}",
+              "message": "Application {{.app.metadata.name}} sync is 'Unknown'.\nApplication details: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}.\n{{range $c := .app.status.conditions}}* {{$c.message}}\n{{end}}",
               "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
             }
       slack:
@@ -332,11 +336,12 @@ notifications:
               "topic": "status",
               "tags": [
                 "argocd",
+                ":white_check_mark:",
                 "{{- .app.metadata.name -}}"
               ],
               "title": "Application {{.app.metadata.name}} has been successfully synced.",
               "markdown": true,
-              "message": ":white_check_mark: Application {{.app.metadata.name}} has been successfully synced at {{.app.status.operationState.finishedAt}}.\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
+              "message": "Application {{.app.metadata.name}} has been successfully synced at {{.app.status.operationState.finishedAt}}.\nSync operation details are available at: {{.context.argocdUrl}}/applications/{{.app.metadata.name}}?operation=true .",
               "click": "{{.context.argocdUrl}}/applications/{{.app.metadata.name}}"
             }
       slack:
