--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,30 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:recommended", ":rebaseStalePrs"],
-  "dependencyDashboard": true,
+  "extends": ["local>joshuachp/renovate"],
   "argocd": {
     "fileMatch": ["infra/argocd/applications\\.yaml$"]
   },
   "kubernetes": {
     "fileMatch": ["infra/.+\\.yaml$"]
   },
-  "pre-commit": {
-    "enabled": true
-  },
   "nix": {
-    "enabled": true,
     "schedule": ["after 7am on saturday"]
-  },
-  "packageRules": [
-    {
-      "description": "Update renovate only daily",
-      "matchDepNames": ["renovate/renovate"],
-      "extends": [
-        "schedule:daily",
-        ":automergePatch",
-        ":automergePr",
-        ":automergeRequireAllStatusChecks"
-      ]
-    }
-  ]
+  }
 }
