--- a/.woodpecker/renovate.yaml
+++ b/.woodpecker/renovate.yaml
@@ -8,6 +8,11 @@ skip_clone: true
 steps:
   - name: renovate
     image: renovate/renovate:38.128.6@sha256:260019e4621db78e2b1f6a70c8c8369d8274163cf37b399683d768d3e460c3fe
+    volumes:
+      - renovate-ci-pvc:/renovate-cache
+    settings:
+      mount:
+        - "renovate-ci-pvc"
     secrets:
       [
         GITHUB_COM_TOKEN,
@@ -19,6 +24,7 @@ steps:
       ]
     environment:
       RENOVATE_CONFIG_FILE: /tmp/config.json
+      RENOVATE_CACHE_DIR: /renovate-cache
       RENOVATE_PLATFORM: gitea
     commands:
       - |
