--- a/.woodpecker/renovate.yaml
+++ b/.woodpecker/renovate.yaml
@@ -29,6 +29,8 @@ steps:
         securityContext:
           runAsUser: 0
           runAsGroup: 0
+          fsGroup: 0
+          privileged: true
     commands:
       - |
         printf '{
