--- a/infra/woodpecker/values.yaml
+++ b/infra/woodpecker/values.yaml
@@ -3,6 +3,7 @@ agent:
   env:
     WOODPECKER_BACKEND_K8S_STORAGE_CLASS: "local-path"
     WOODPECKER_BACKEND_K8S_STORAGE_RWX: false
+    WOODPECKER_BACKEND_K8S_SECCTX_NONROOT: true
     WOODPECKER_MAX_WORKFLOWS: "2"
   extraSecretNamesForEnvFrom:
     - woodpecker-env
