fix(renovate): problems with volume
Revert the cache since we cannot mount the volume yet.

--- a/.woodpecker/renovate.yaml
+++ b/.woodpecker/renovate.yaml
@@ -8,8 +8,9 @@ skip_clone: true
 steps:
   - name: renovate
     image: renovate/renovate:38.128.6@sha256:260019e4621db78e2b1f6a70c8c8369d8274163cf37b399683d768d3e460c3fe
-    volumes:
-      - renovate-ci-pvc:/renovate-cache
+    # TODO: Add when non root containers work in woodpacker
+    # volumes:
+    #   - renovate-ci-pvc:/renovate-cache
     secrets:
       [
         GITHUB_COM_TOKEN,
@@ -21,9 +22,8 @@ steps:
       ]
     environment:
       RENOVATE_CONFIG_FILE: /tmp/config.json
-      RENOVATE_CACHE_DIR: /renovate-cache
+      # RENOVATE_CACHE_DIR: /renovate-cache
       RENOVATE_PLATFORM: gitea
-    # TODO: remove when non root containers work
     backend_options:
       kubernetes:
         securityContext:
