--- a/infra/postgres/deployment.yaml
+++ b/infra/postgres/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: postgres-pdb
   namespace: postgres
 spec:
-  maxUnavailable: 0
+  minAvailable: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: postgres
