fix(pi-hole): set container port proto UDP

--- a/infra/pi-hole/deployment.yaml
+++ b/infra/pi-hole/deployment.yaml
@@ -28,8 +28,9 @@ spec:
               cpu: "10m"
               memory: "10Mi"
           ports:
-            - containerPort: 53
-              name: dns
+            - name: dns
+              protocol: UDP
+              containerPort: 53
           volumeMounts:
             - name: config
               mountPath: "/etc/dnsmasq.d/"
