--- a/infra/pi-hole/deployment.yaml
+++ b/infra/pi-hole/deployment.yaml
@@ -1,73 +1,130 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dnsmasq
+  name: pi-hole
   namespace: pi-hole
 spec:
   selector:
     matchLabels:
-      app.kubernetes.io/name: dnsmasq
+      app.kubernetes.io/name: pi-hole
   template:
     metadata:
       labels:
-        app.kubernetes.io/name: dnsmasq
+        app.kubernetes.io/name: pi-hole
     spec:
       tolerations:
         - key: location
           value: external
           effect: NoSchedule
-      nodeName: kani
+      nodeSelector:
+        kubernetes.io/hostname: kani
       containers:
-        - name: ntfy
-          image: "joshuachp/dnsmasq:0.1.1@sha256:85de4ed07d8401120b9bef0290bf78b2b3d46758d7cfe6320be4d90cb6e3b9d2"
+        - name: pi-hole
+          image: "pihole/pihole:latest"
           resources:
             limits:
-              memory: "128Mi"
+              memory: "252Mi"
               cpu: "500m"
             requests:
               cpu: "10m"
               memory: "10Mi"
+          env:
+            - name: TZ
+              value: "Europe/Rome"
+            - name: PIHOLE_DNS_
+              value: "1.1.1.1;1.0.0.1"
+            - name: FTLCONF_LOCAL_IPV4
+              value: "192.168.3.1"
+            - name: VIRTUAL_HOST
+              value: "pi-hole.k.joshuachp.dev"
+          envFrom:
+            - secretRef:
+                name: pi-hole-env
+                optional: false
           ports:
+            - name: web
+              protocol: TCP
+              containerPort: 80
             - name: dns
               protocol: UDP
               containerPort: 53
+            - name: dns-tcp
+              protocol: TCP
+              containerPort: 53
+            - name: dhcp
+              protocol: UDP
+              containerPort: 67
           volumeMounts:
-            - name: config
+            - name: store
               mountPath: "/etc/dnsmasq.d/"
-              readOnly: true
+              subPath: "dnsmasq"
+            - name: store
+              mountPath: "/etc/pihole/"
+              subPath: "pihole"
           securityContext:
-            readOnlyRootFilesystem: true
+            capabilities:
+              add:
+                - CAP_CHOWN
+                - CAP_NET_ADMIN
+                - CAP_NET_BIND_SERVICE
       volumes:
-        - name: config
-          configMap:
-            name: dnsmasq
-            optional: false
-      securityContext:
-        runAsUser: 100
-        runAsGroup: 101
+        - name: store
+          persistentVolumeClaim:
+            claimName: pi-hole-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: dns
+  name: pi-hole
+  namespace: pi-hole
+spec:
+  selector:
+    app.kubernetes.io/name: pi-hole
+  ports:
+    - name: web
+      port: 80
+      protocol: TCP
+      targetPort: 80
+    - name: dns
+      port: 53
+      protocol: UDP
+      targetPort: 53
+    - name: dns-tcp
+      port: 53
+      protocol: TCP
+      targetPort: 53
+    - name: dhcp
+      port: 67
+      protocol: UDP
+      targetPort: 67
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: pi-hole-local
   namespace: pi-hole
   annotations:
     metallb.universe.tf/address-pool: external-pool
 spec:
   selector:
-    app.kubernetes.io/name: dnsmasq
+    app.kubernetes.io/name: pi-hole
   type: LoadBalancer
+  externalTrafficPolicy: Local
   ports:
+    - name: web
+      port: 80
+      protocol: TCP
+      targetPort: 80
     - name: dns
       port: 53
       protocol: UDP
       targetPort: 53
+    - name: dns-tcp
+      port: 53
+      protocol: TCP
+      targetPort: 53
+    - name: dhcp
+      port: 67
+      protocol: UDP
+      targetPort: 67
   loadBalancerIP: 192.168.3.1
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: dnsmasq
-  namespace: pi-hole
-data:
-  10-deployment.conf: ""
