feat(prometheus): increase replicas to 2

--- a/infra/observability/values.yaml
+++ b/infra/observability/values.yaml
@@ -9,6 +9,7 @@ prometheusOperator:
 
 prometheus:
   prometheusSpec:
+    replicas: 2
     externalUrl: "https://prometheus.k.joshuachp.dev"
     tolerations:
       - key: "location"
