--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,8 @@ repos:
     hooks:
       - id: typos
       - id: committed
+      - id: sh-fmt
+      - id: sh-check
       - id: nix-nixfmt
       - id: nix-statix
       - id: nix-flake-check
