--- a/infra/homepage/ingress.yaml
+++ b/infra/homepage/ingress.yaml
@@ -1,3 +1,22 @@
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: homepage
+  namespace: homepage
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: home.k.joshuachp.dev
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: homepage
+                port:
+                  name: http
+---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
