--- a/infra/minio/ingress.yaml
+++ b/infra/minio/ingress.yaml
@@ -1,3 +1,32 @@
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: minio
+  namespace: minio
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: minio.k.joshuachp.dev
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: minio
+                port:
+                  name: web
+    - host: minio-console.k.joshuachp.dev
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: minio
+                port:
+                  name: console
+---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
