--- a/infra/pi-hole/ingress.yaml
+++ b/infra/pi-hole/ingress.yaml
@@ -1,3 +1,22 @@
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: pi-hole
+  namespace: pi-hole
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: pi-hole.k.joshuachp.dev
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: pi-hole
+                port:
+                  name: web
+---
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
