--- a/infra/cert-manager/certificate/k-joshuachp-dev-staging.yaml
+++ b/infra/cert-manager/certificate/k-joshuachp-dev-staging.yaml
@@ -2,7 +2,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: k-joshuachp-dev-staging
-  namespace: traefik
+  namespace: ingress-nginx
 spec:
   secretName: cert-k-joshuachp-dev-staging
   commonName: "k.joshuachp.dev"
