--- a/infra/coredns/config.yaml
+++ b/infra/coredns/config.yaml
@@ -5,5 +5,4 @@ metadata:
   namespace: kube-system
 data:
   custom.override: |
-    rewrite continue name git.k.joshuachp.dev traefik.traefik.svc.cluster.local
-    rewrite continue name traefik.k.joshuachp.dev traefik.traefik.svc.cluster.local
+    rewrite continue name git.k.joshuachp.dev ingress-nginx-controller.ingress-nginx.svc.cluster.local
