feat(ingress): add hosts to helm

--- a/infra/forgejo/values.yaml
+++ b/infra/forgejo/values.yaml
@@ -1,6 +1,11 @@
 ingress:
   enabled: true
   className: nginx
+  hosts:
+    - host: git.k.joshuachp.dev
+      paths:
+        - path: /
+          pathType: Prefix
 
 redis-cluster:
   enabled: false
